# jangada

./: .gitignore  LICENSE  MANIFEST.in  README.md  makefile  pyproject.toml  requirements.txt
__docs/: index.rst
__docs/contents/api_reference/: index.rst
__docs/contents/api_reference/mixin/: Activatable.rst  Colorable.rst  Describable.rst  Identifiable.rst  Nameable.rst  TagNamespace.rst  Taggable.rst  index.rst
__docs/contents/api_reference/serialization/: Persistable.rst  Serializable.rst  SerializableMetatype.rst  SerializableProperty.rst  index.rst
__test/: test_Serializable.py  test_SerializableProperty.py  test_Serializable_CONCERNS.py  test_display.py  test_mixin.py  test_serialization.py  test_system.py
docs/: Makefile  conf.py
jangada/: __init__.py  display.py  mixin.py  serialization.py  system.py
jangada/serialization/: __init__.py  properties.py  serialization.py
test/: test_Persistable.py  test_System.py
